lib/BasicScriptParser.py
# Generated from grammar/BasicScript.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class BasicScriptParser ( Parser ):

    grammarFileName = "BasicScript.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'let'", "':'", "'if'", "'while'", 
                     "'for'", "'try'", "'catch'", "'throw'", "'break'", 
                     "'continue'", "'function'", "','", "'return'", "'{'", 
                     "'}'", "'||'", "'&&'", "'!'", "'=='", "'!='", "'<'", 
                     "'<='", "'>'", "'>='", "'['", "']'", "'+'", "'-'", 
                     "'*'", "'/'", "'^'", "'%'", "'('", "')'", "'True'", 
                     "'False'", "'else'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ELSE", "ID", "FLOAT", "STRING", 
                      "INT", "WS", "COMMENT", "LINE_COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_assign = 2
    RULE_expr_s = 3
    RULE_if = 4
    RULE_while = 5
    RULE_for = 6
    RULE_try_catch = 7
    RULE_throw = 8
    RULE_break = 9
    RULE_continue = 10
    RULE_function = 11
    RULE_param_list = 12
    RULE_return = 13
    RULE_block = 14
    RULE_expr = 15
    RULE_arg_list = 16
    RULE_pair_list = 17
    RULE_pair = 18

    ruleNames =  [ "program", "statement", "assign", "expr_s", "if", "while", 
                   "for", "try_catch", "throw", "break", "continue", "function", 
                   "param_list", "return", "block", "expr", "arg_list", 
                   "pair_list", "pair" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    ELSE=38
    ID=39
    FLOAT=40
    STRING=41
    INT=42
    WS=43
    COMMENT=44
    LINE_COMMENT=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(BasicScriptParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BasicScriptParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8469743197940) != 0):
                self.state = 38
                self.statement()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(BasicScriptParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assign(self):
            return self.getTypedRuleContext(BasicScriptParser.AssignContext,0)


        def expr_s(self):
            return self.getTypedRuleContext(BasicScriptParser.Expr_sContext,0)


        def if_(self):
            return self.getTypedRuleContext(BasicScriptParser.IfContext,0)


        def while_(self):
            return self.getTypedRuleContext(BasicScriptParser.WhileContext,0)


        def for_(self):
            return self.getTypedRuleContext(BasicScriptParser.ForContext,0)


        def try_catch(self):
            return self.getTypedRuleContext(BasicScriptParser.Try_catchContext,0)


        def throw(self):
            return self.getTypedRuleContext(BasicScriptParser.ThrowContext,0)


        def break_(self):
            return self.getTypedRuleContext(BasicScriptParser.BreakContext,0)


        def continue_(self):
            return self.getTypedRuleContext(BasicScriptParser.ContinueContext,0)


        def function(self):
            return self.getTypedRuleContext(BasicScriptParser.FunctionContext,0)


        def return_(self):
            return self.getTypedRuleContext(BasicScriptParser.ReturnContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_statement

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = BasicScriptParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.assign()
                self.state = 47
                self.match(BasicScriptParser.T__0)
                pass
            elif token in [15, 19, 26, 34, 36, 37, 39, 40, 41, 42]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.expr_s()
                self.state = 50
                self.match(BasicScriptParser.T__0)
                pass
            elif token in [4]:
                self.enterOuterAlt(localctx, 3)
                self.state = 52
                self.if_()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 53
                self.while_()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 5)
                self.state = 54
                self.for_()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 6)
                self.state = 55
                self.try_catch()
                pass
            elif token in [9]:
                self.enterOuterAlt(localctx, 7)
                self.state = 56
                self.throw()
                self.state = 57
                self.match(BasicScriptParser.T__0)
                pass
            elif token in [10]:
                self.enterOuterAlt(localctx, 8)
                self.state = 59
                self.break_()
                self.state = 60
                self.match(BasicScriptParser.T__0)
                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 9)
                self.state = 62
                self.continue_()
                self.state = 63
                self.match(BasicScriptParser.T__0)
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 10)
                self.state = 65
                self.function()
                pass
            elif token in [14]:
                self.enterOuterAlt(localctx, 11)
                self.state = 66
                self.return_()
                self.state = 67
                self.match(BasicScriptParser.T__0)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BasicScriptParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_assign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssign" ):
                return visitor.visitAssign(self)
            else:
                return visitor.visitChildren(self)




    def assign(self):

        localctx = BasicScriptParser.AssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_assign)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(BasicScriptParser.T__1)
            self.state = 72
            self.match(BasicScriptParser.ID)
            self.state = 73
            self.match(BasicScriptParser.T__2)
            self.state = 74
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_sContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_expr_s

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_s" ):
                return visitor.visitExpr_s(self)
            else:
                return visitor.visitChildren(self)




    def expr_s(self):

        localctx = BasicScriptParser.Expr_sContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_expr_s)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(BasicScriptParser.ELSE, 0)

        def if_(self):
            return self.getTypedRuleContext(BasicScriptParser.IfContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_if

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf" ):
                return visitor.visitIf(self)
            else:
                return visitor.visitChildren(self)




    def if_(self):

        localctx = BasicScriptParser.IfContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_if)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.match(BasicScriptParser.T__3)
            self.state = 79
            self.expr(0)
            self.state = 80
            self.block()
            self.state = 85
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 81
                self.match(BasicScriptParser.ELSE)
                self.state = 82
                self.block()

            elif la_ == 2:
                self.state = 83
                self.match(BasicScriptParser.ELSE)
                self.state = 84
                self.if_()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(BasicScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_while

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhile" ):
                return visitor.visitWhile(self)
            else:
                return visitor.visitChildren(self)




    def while_(self):

        localctx = BasicScriptParser.WhileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_while)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.match(BasicScriptParser.T__4)
            self.state = 88
            self.expr(0)
            self.state = 89
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BasicScriptParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def block(self):
            return self.getTypedRuleContext(BasicScriptParser.BlockContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_for

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = BasicScriptParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_for)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self.match(BasicScriptParser.T__5)
            self.state = 92
            self.match(BasicScriptParser.ID)
            self.state = 93
            self.match(BasicScriptParser.T__2)
            self.state = 94
            self.expr(0)
            self.state = 95
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Try_catchContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.BlockContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.BlockContext,i)


        def ID(self):
            return self.getToken(BasicScriptParser.ID, 0)

        def getRuleIndex(self):
            return BasicScriptParser.RULE_try_catch

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTry_catch" ):
                return visitor.visitTry_catch(self)
            else:
                return visitor.visitChildren(self)




    def try_catch(self):

        localctx = BasicScriptParser.Try_catchContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_try_catch)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(BasicScriptParser.T__6)
            self.state = 98
            self.block()
            self.state = 99
            self.match(BasicScriptParser.T__7)
            self.state = 100
            self.match(BasicScriptParser.ID)
            self.state = 101
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ThrowContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_throw

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitThrow" ):
                return visitor.visitThrow(self)
            else:
                return visitor.visitChildren(self)




    def throw(self):

        localctx = BasicScriptParser.ThrowContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_throw)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(BasicScriptParser.T__8)
            self.state = 104
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicScriptParser.RULE_break

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreak" ):
                return visitor.visitBreak(self)
            else:
                return visitor.visitChildren(self)




    def break_(self):

        localctx = BasicScriptParser.BreakContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_break)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(BasicScriptParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContinueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicScriptParser.RULE_continue

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContinue" ):
                return visitor.visitContinue(self)
            else:
                return visitor.visitChildren(self)




    def continue_(self):

        localctx = BasicScriptParser.ContinueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_continue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.match(BasicScriptParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BasicScriptParser.ID, 0)

        def block(self):
            return self.getTypedRuleContext(BasicScriptParser.BlockContext,0)


        def param_list(self):
            return self.getTypedRuleContext(BasicScriptParser.Param_listContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_function

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction" ):
                return visitor.visitFunction(self)
            else:
                return visitor.visitChildren(self)




    def function(self):

        localctx = BasicScriptParser.FunctionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_function)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(BasicScriptParser.T__11)
            self.state = 111
            self.match(BasicScriptParser.ID)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 112
                self.match(BasicScriptParser.T__2)
                self.state = 113
                self.param_list()


            self.state = 116
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BasicScriptParser.ID)
            else:
                return self.getToken(BasicScriptParser.ID, i)

        def getRuleIndex(self):
            return BasicScriptParser.RULE_param_list

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = BasicScriptParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.match(BasicScriptParser.ID)
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 119
                self.match(BasicScriptParser.T__12)
                self.state = 120
                self.match(BasicScriptParser.ID)
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_return

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn" ):
                return visitor.visitReturn(self)
            else:
                return visitor.visitChildren(self)




    def return_(self):

        localctx = BasicScriptParser.ReturnContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_return)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(BasicScriptParser.T__13)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 8469743173632) != 0):
                self.state = 127
                self.expr(0)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.StatementContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.StatementContext,i)


        def getRuleIndex(self):
            return BasicScriptParser.RULE_block

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlock" ):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = BasicScriptParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(BasicScriptParser.T__14)
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 8469743197940) != 0):
                self.state = 131
                self.statement()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 137
            self.match(BasicScriptParser.T__15)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return BasicScriptParser.RULE_expr

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class OrContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOr" ):
                return visitor.visitOr(self)
            else:
                return visitor.visitChildren(self)


    class ModContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMod" ):
                return visitor.visitMod(self)
            else:
                return visitor.visitChildren(self)


    class MulImpliedContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)

        def ID(self):
            return self.getToken(BasicScriptParser.ID, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulImplied" ):
                return visitor.visitMulImplied(self)
            else:
                return visitor.visitChildren(self)


    class AddSubContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAddSub" ):
                return visitor.visitAddSub(self)
            else:
                return visitor.visitChildren(self)


    class MulDivContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.op = None # Token
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMulDiv" ):
                return visitor.visitMulDiv(self)
            else:
                return visitor.visitChildren(self)


    class ParensContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self):
            return self.getTypedRuleContext(BasicScriptParser.ExprContext,0)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParens" ):
                return visitor.visitParens(self)
            else:
                return visitor.visitChildren(self)


    class TrueContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTrue" ):
                return visitor.visitTrue(self)
            else:
                return visitor.visitChildren(self)


    class IndexContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIndex" ):
                return visitor.visitIndex(self)
            else:
                return visitor.visitChildren(self)


    class StringContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(BasicScriptParser.STRING, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitString" ):
                return visitor.visitString(self)
            else:
                return visitor.visitChildren(self)


    class FalseContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFalse" ):
                return visitor.visitFalse(self)
            else:
                return visitor.visitChildren(self)


    class EqContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BasicScriptParser.ExprContext)
            else:
                return self.getTypedRuleContext(BasicScriptParser.ExprContext,i)


        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEq" ):
                return visitor.visitEq(self)
            else:
                return visitor.visitChildren(self)


    class IntContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(BasicScriptParser.INT, 0)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInt" ):
                return visitor.visitInt(self)
            else:
                return visitor.visitChildren(self)


    class ArrayContext(ExprContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a BasicScriptParser.ExprContext
